# deny_rust

./: .gitignore  Cargo.toml  Makefile  README.md  bench.sh  bench.txt  benchmark_deny.py  deny.toml  deny_check.py  deny_check_config.json  deny_check_old.py  deny_check_py.py  deny_check_rs.py  deny_filter.pyi  main.py  main_rs.py  pyproject.toml  run.sh  test_prompt_pre_fetch.py
.github/workflows/: rust-plugin.yml
benchmarks/: compare.py  deny_list_init.py
deny_filter/: __init__.py  deny_filter.pyi
plugins/: __init__.py
plugins/deny_filter/: __init__.py  deny.py  deny_ac.py  deny_rust.py  deny_rust_daac.py  deny_rust_rs.py  deny_violation.py
src/: build_error.rs  deny_list.rs  deny_list_config.rs  deny_list_daac.rs  deny_list_mod.rs  deny_list_mp.rs  deny_list_plugin.rs  deny_list_plugin_new.rs  deny_list_rs.rs  lib.rs  matcher.rs  module.rs  pymodule.rs  scan_any.rs
stub/: deny_filter.pyi
stubs/: ahocorasick.pyi
tests/: README.md  conftest.py  pytest.ini  test_benchmark_comparison.py  test_benchmark_deny.py  test_deny_ac.py  test_deny_list.rs  test_edge_cases.rs  test_main_rs.py  test_py_deny_list.rs  test_python_edge_cases.py
tests/.benchmarks/Linux-CPython-3.12-64bit/: 0001_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_115759_uncommited-changes.json  0002_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_115905_uncommited-changes.json  0003_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_115916_uncommited-changes.json  0004_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_120328_uncommited-changes.json  0005_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_130939_uncommited-changes.json  0006_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_131053_uncommited-changes.json  0007_50807f120728d2bdf7d9a996c15cc74ba7141007_20260213_131139_uncommited-changes.json  (+8 more)
tests/data/: deny_check_config_10.json  deny_check_config_100.json  deny_check_config_1000.json  deny_check_config_20.json  deny_check_config_200.json  deny_check_config_50.json  mixed_case_1000.json
