[project]
name = "deny-rust"
version = "1.0.0-BETA-2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "mcp-contextforge-gateway>=0.9.0",
    "pip>=26.0.1",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# This tells maturin which features to use when uv builds it
features = ["pyo3/extension-module"]
module-name = "deny_rust"
