[project]
name = "deny_filter"
version = "1.0.0-BETA-2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp-contextforge-gateway>=0.9.0",
    "pyahocorasick>=2.3.0",
]


[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
# This tells maturin which features to use when uv builds it
features = ["pyo3/extension-module"]
module-name = "deny_filter"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.TYPECHECK]
extension-pkg-allow-list = ["deny_filter","ahocorasick"]

[tool.pyrefly]
search-path = [".", "stubs"]
#site-package-path = [".venv/lib/python3.13/site-packages"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
  "black>=26.1.0",
  "maturin>=1.11.5",
  "scalene>=2.1.3",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "line-profiler>=5.0.1",
  "py-spy>=0.4.1",
  "pyperf>=2.10.0",
  "uv>=0.10.2",
  "pytest-benchmark>=5.2.3",
  "pyrefly>=0.52.0",
  "ruff>=0.15.1",
  "pylint>=4.0.4",
  "isort>=7.0.0",
]
